# velox4j

./: .gitignore  README.md  pom.xml
.github/workflows/: bot-dep.yml  java-ut.yml  ut-java.yml
.github/workflows/scripts/bot-dep/: bump-velox.sh
.github/workflows/scripts/ut-java/: setup-ubuntu20.sh
src/main/cpp/: CMakeLists.txt  build.sh  velox-ref-hash.txt  velox-ref.txt
src/main/cpp/main/: CMakeLists.txt
src/main/cpp/main/velox4j/arrow/: Arrow.cc  Arrow.h
src/main/cpp/main/velox4j/config/: Config.cc  Config.h
src/main/cpp/main/velox4j/connector/: ExternalStream.cc  ExternalStream.h
src/main/cpp/main/velox4j/init/: Init.cc  Init.h
src/main/cpp/main/velox4j/iterator/: DownIterator.cc  DownIterator.h  UpIterator.cc  UpIterator.h
src/main/cpp/main/velox4j/jni/: JniCommon.cc  JniCommon.h  JniError.cc  JniError.h  JniLoader.cc  JniWrapper.cc  JniWrapper.h  StaticJniWrapper.cc  StaticJniWrapper.h
src/main/cpp/main/velox4j/lifecycle/: ObjectStore.cc  ObjectStore.h  ResourceMap.h  Session.cc  Session.h
src/main/cpp/main/velox4j/memory/: AllocationListener.cc  AllocationListener.h  ArrowMemoryPool.cc  ArrowMemoryPool.h  JavaAllocationListener.cc  JavaAllocationListener.h  MemoryManager.cc  MemoryManager.h
src/main/cpp/main/velox4j/query/: BoundSplit.cc  BoundSplit.h  Query.cc  Query.h  QueryExecutor.cc  QueryExecutor.h
src/main/cpp/test/: CMakeLists.txt
src/main/cpp/test/velox4j/query/: QuerySerdeTest.cc
src/main/cpp/test/velox4j/test/: Init.h
src/main/java/io/github/zhztheplayer/velox4j/: Velox4j.java
src/main/java/io/github/zhztheplayer/velox4j/aggregate/: Aggregate.java  AggregateStep.java
src/main/java/io/github/zhztheplayer/velox4j/arrow/: Arrow.java
src/main/java/io/github/zhztheplayer/velox4j/collection/: Streams.java
src/main/java/io/github/zhztheplayer/velox4j/config/: Config.java  ConnectorConfig.java
src/main/java/io/github/zhztheplayer/velox4j/connector/: Assignment.java  ColumnHandle.java  ColumnType.java  ConnectorSplit.java  ConnectorTableHandle.java  ExternalStream.java  ExternalStreamConnectorSplit.java  ExternalStreamTableHandle.java  FileFormat.java  FileProperties.java  HiveBucketConversion.java  HiveColumnHandle.java  HiveConnectorSplit.java  HiveTableHandle.java  RowIdProperties.java  SubfieldFilter.java
src/main/java/io/github/zhztheplayer/velox4j/data/: BaseVector.java  BaseVectors.java  RowVector.java  RowVectors.java  VectorEncoding.java
src/main/java/io/github/zhztheplayer/velox4j/exception/: ExceptionDescriber.java  VeloxException.java
src/main/java/io/github/zhztheplayer/velox4j/expression/: CallTypedExpr.java  CastTypedExpr.java  ConcatTypedExpr.java  ConstantTypedExpr.java  DereferenceTypedExpr.java  FieldAccessTypedExpr.java  InputTypedExpr.java  LambdaTypedExpr.java  TypedExpr.java
src/main/java/io/github/zhztheplayer/velox4j/filter/: AlwaysTrue.java  Filter.java
src/main/java/io/github/zhztheplayer/velox4j/iterator/: DownIterator.java  UpIterator.java
src/main/java/io/github/zhztheplayer/velox4j/jni/: CalledFromNative.java  CppObject.java  JniApi.java  JniLibLoader.java  JniWorkspace.java  JniWrapper.java  LocalSession.java  Session.java  StaticJniApi.java  StaticJniWrapper.java
src/main/java/io/github/zhztheplayer/velox4j/memory/: AllocationListener.java  MemoryManager.java  NoopAllocationListener.java
src/main/java/io/github/zhztheplayer/velox4j/plan/: AggregationNode.java  PlanNode.java  ProjectNode.java  TableScanNode.java  ValuesNode.java
src/main/java/io/github/zhztheplayer/velox4j/query/: BoundSplit.java  Query.java
src/main/java/io/github/zhztheplayer/velox4j/resource/: PlainResourceFile.java  ResourceFile.java  Resources.java
src/main/java/io/github/zhztheplayer/velox4j/serde/: NativeBean.java  PolymorphicDeserializer.java  PolymorphicSerializer.java  Serde.java  SerdeRegistry.java  SerdeRegistryFactory.java
src/main/java/io/github/zhztheplayer/velox4j/serializable/: VeloxSerializable.java  VeloxSerializables.java
src/main/java/io/github/zhztheplayer/velox4j/sort/: SortOrder.java
src/main/java/io/github/zhztheplayer/velox4j/type/: ArrayType.java  BigIntType.java  BooleanType.java  DateType.java  DecimalType.java  DoubleType.java  FunctionType.java  HugeIntType.java  IntegerType.java  IntervalDayTimeType.java  IntervalYearMonthType.java  MapType.java  OpaqueType.java  RealType.java  RowType.java  SmallIntType.java  TimestampType.java  TinyIntType.java  Type.java  UnknownType.java  VarCharType.java  VarbinaryType.java
src/main/java/io/github/zhztheplayer/velox4j/variant/: ArrayValue.java  BigIntValue.java  BooleanValue.java  DoubleValue.java  HugeIntValue.java  IntegerValue.java  MapValue.java  RealValue.java  RowValue.java  SmallIntValue.java  TimestampValue.java  TinyIntValue.java  VarBinaryValue.java  VarCharValue.java  Variant.java  Variants.java
src/test/java/io/github/zhztheplayer/velox4j/jni/: JniApiTest.java
src/test/resources/query/: example-1.json
(+14 files in other folders)
